--- a/style/style.css
+++ b/style/style.css
@@ -1,37 +1,93 @@
   /*Calendar styles*/
-.calendar__box {
-    max-width: 50vw;
+  .week__nav, .day__nav {
+    background-color: white;
+    border: none;
+  }
+
+  .week__nav:hover, .day__nav:hover {
+    color: blue;
+    font-weight: bold;
+  }
+
+
+.calendar__box__week, .calendar__box__day {
+    max-width: 70vw;
     margin: auto;
     padding: 1.5vw;
-
 }
 
-  .calendar {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
+.week__view {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    text-align: center;
 }
 
-.monthly__view {
-    display: flex;
-    flex-direction: column;
+.calendar {
+    grid-column: 1 / 9;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
 }
 
-.day__of__week {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+#zero, #I, #II, #III, #IV, #V, #VI, #VII {
+    grid-row: 2 / 3;
+    min-height: 60px;
+    align-content: center;
 }
 
-.day__time{
+.day__time {
+    grid-column: 1 / 2;
+    min-height: 60px;
+    align-content: center;
+}
+
+.cell {
+    border: 1px solid rgb(244, 243, 253);
+}
+
+.event {
+    grid-column: 3 / 4;
+    grid-row: 5 / 20;
+    background-color: rgb(203, 225, 255);
+    border-radius: 5px;
     padding: 5px;
+    margin: 5px;
+    justify-self: stretch;
 }
+
+.event p {
+    margin: 5px;
+}
+
+.calendar__box__day {
+    display: none;
+}
+
+
 
 @media (max-width: 600px) {
-    h1 {
+
+    .calendar__box__week {
+        display: none;
+    }
+
+    .calendar__box__day {
+        display: block;
+    }
+
+    h1, h2 {
+        text-align: center;
+    }
+
+    .daily__view {
+        display: grid;
+        grid-template-rows: repeat(13, 1fr);
+        grid-template-columns: 0.3fr 1fr;
+    }
+
+    .event{
+        grid-column: 2/3;
+        grid-row: 5 / 12;
         text-align: center;
     }
 }
